fix(css): fix logo size on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,10 +43,6 @@
 }
 
 @media (max-width: 430px) {
-  .header__logo {
-    max-width: 50%;
-  }
-
   .header-area {
     height: 80px;
   }
